# lost-found

./: .env  .env.example  .env.local  .env.production  .env.template  .gitignore  ADMIN_ENDPOINTS_FIX_COMPLETE.md  ADMIN_STATS_FIX.md  API_KEYS_GUIDE.md  BACKEND_CONNECTIVITY_VERIFICATION.md  COMPREHENSIVE_PROJECT_REPORT.md  COMPREHENSIVE_TESTING_REPORT.md  COPY_PASTE_COMMANDS.txt  DATABASE_SEEDED.md  DATABASE_SEEDING_GUIDE.md  DATABASE_URL_STANDARDIZATION.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DOCKER_FIXES.md  ENV_CLEANUP_SUMMARY.md  ENV_CONFIGURATION_README.md  ENV_IMPLEMENTATION_SUMMARY.md  ENV_QUICK_REFERENCE.md  ENV_REAL_DATA_SUMMARY.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_ENV_SUMMARY.md  FINAL_FIXES_2025-10-08.md  FIXES_APPLIED_2025-10-08.md  FRONTEND_FIX_SUMMARY.md  GETTING_STARTED.md  LICENSE  LOCAL_SETUP_GUIDE.md  LOGIN_FIX_VERIFIED.md  LOGIN_GUIDE.md  MIGRATION_FIXES_APPLIED.md  MIGRATION_SEEDING_SUMMARY.md  MIGRATION_SEEDING_VERIFICATION.md  Makefile  OPTIMIZATION_COMPLETE.md  PASSWORD_FIX_SUMMARY.md  PERFORMANCE_ROADMAP.md  (+44 more)
.github/workflows/: api-smoke.yml  ci-cd.yml
apps/admin/: .dockerignore  .env.example  .env.local  DOCKER.md  Dockerfile  Dockerfile.dev  README.md  index.html  middleware.ts  next.config.js  package-lock.json  package.json  setup.bat  setup.sh  tsconfig.json
apps/mob/: pubspec.yaml
apps/mobile/: .dockerignore  BACKEND_INTEGRATION.md  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md  RELEASE_APK_TROUBLESHOOTING.md  STATISTICS_IMPROVEMENTS.md  TESTING_GUIDE.md  TESTING_RESULTS.md  analysis_options.yaml  build_release_apk.bat  env.example  pubspec.yaml
backend/: README.md  RESTRUCTURE_COMPLETION.md  RESTRUCTURE_SUMMARY.md
backend/api/: .dockerignore  .env  .env.example  Dockerfile  README.md  requirements.txt  setup_backend_enhancements.py
backend/base/: Dockerfile
backend/common/: __init__.py  health.py
backend/nlp/: .dockerignore  .env  Dockerfile  requirements.txt
backend/vision/: .dockerignore  .env  Dockerfile  requirements.txt
backend/worker/: .dockerignore  .env  .env.example  Dockerfile  celerybeat-schedule  requirements.txt
data/: init_database.py
data/queries/: PG18_01_SETUP.sql  PG18_02_INDEXES.sql  PG18_03_SEED_DATA.sql  PG18_04_QUERIES.sql  PG18_README.md  README.md  create_schema.sql
data/seed/: seed_database.py
deployment/: README.md  docker-compose-local.yml  docker-compose-minimal.yml  docker-compose-simple.yml  docker-compose.yml
docs/: README.md  RESEARCH_CONFIGURATION.md  RESEARCH_IMPLEMENTATION.md  RESEARCH_PROPOSAL.md  architecture.md
frontend/: README.md
frontend/mobile/: pubspec.yaml
frontend/web-admin/: .dockerignore  .env.example  .env.local  Dockerfile  README.md  next.config.js  package.json  tailwind.config.js
infra/compose/: .env.development  .env.example  .env.production  .env.template  README.md  docker-compose.yml  env.development  env.example  env.template  loki-config.yml  openapi2.json  openapi3.json  prometheus-alerts.yml  prometheus.yml  promtail-config.yml  test_login.json  test_login2.json  test_login_mobile.json  test_profile_update.json  test_register.json  test_register2.json  test_register3.json  (+1 more)
scripts/: dev.ps1  smoke_test_api.py  validate_restructure.py
tests/: README.md  conftest.py  test_health_endpoints.py
tools/: README.md  evaluate_matches.py  run_research_experiments.py  validate_config.py
(+686 files in other folders)
