[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lost-found-backend"
version = "2.0.0"
description = "Lost & Found System - Backend Services"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lost & Found Team"}
]
keywords = ["lost-and-found", "matching", "nlp", "computer-vision"]

# Core dependencies shared across all services
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
# API service dependencies
api = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Pin bcrypt due to passlib 1.7.x expecting __about__.__version__ attribute removed in newer bcrypt releases
    "bcrypt==4.0.1",
    "python-multipart>=0.0.6",
    "celery>=5.3.4",
    "redis>=5.0.0",
    "boto3>=1.28.0",
]

# NLP service dependencies
nlp = [
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "langdetect>=1.0.9",
    "googletrans==4.0.0rc1",
    "deep-translator>=1.11.4",
]

# Vision service dependencies
vision = [
    "pillow>=10.0.0",
    "imagehash>=4.3.1",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
]

# Worker service dependencies
worker = [
    "celery>=5.3.4",
    "redis>=5.0.0",
    "boto3>=1.28.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.1",
    "requests>=2.31.0",
    "loguru>=0.7.2",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "black>=23.10.0",
]

# All dependencies (for local development)
all = [
    "lost-found-backend[api,nlp,vision,worker,dev]",
]

[project.urls]
Homepage = "https://github.com/DATDSG/lost-found"
Repository = "https://github.com/DATDSG/lost-found"
Issues = "https://github.com/DATDSG/lost-found/issues"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests as integration tests (require running services)",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
